@@ -2,7 +2,7 @@ extractdctable.default <-
 function(x, ...)
 {
     quantiles = c(0.025, 0.25, 0.5, 0.75, 0.975)
-    y <- mcmcapply(x, array)
+    y <- as.matrix(x) # mcmcapply(x, array)
     Mean <- apply(y, 2, mean)
     Sd <- apply(y, 2, sd)
     if (nchain(x) > 1) {
