@@ -1,3 +1,3 @@
 vcov.mcmc.list <-
 function(object, ...)
-    cov(mcmcapply(object, array))
+    cov(as.matrix(x), ...)
