@@ -18,6 +18,8 @@ Version 1.4-1, September 28, 2011
       when issueing warning based on Rhat.
     * dcoptions()$overwrite changed to TRUE by default,
       this might spare some headaches when going parallel.
+    * lambdamax.diag returned sd instead of variance for
+      one parameter case, bug fixed (reported by S Lele).
 
 Version 1.4-0, September 28, 2011
     * Major CRAN release with new parallel features.
